# Paper_Research_Helper

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
docs/: architecture.md  getting_started.md
src/: __init__.py  callbacks.py  llm.py
src/adapters/: __init__.py  arxiv.py  aurora.py  bedrock.py  claude.py  pdf.py  postgres.py  semantic_scholar.py
src/agents/: __init__.py  qa_agent.py  research_agent.py
src/graphs/: __init__.py  research_graph.py
src/mcp/: __init__.py  server.py
src/pipeline/: __init__.py  ingestion.py
src/tools/: __init__.py  retrieval.py  search.py  summarize.py
